# portal

./: .env  .eslintrc.js  .firebaserc  .flake8  .gitattributes  .gitignore  .pylintrc  .replit  DEPLOYMENT.md  README.md  README_AI_MESSENGER.md  alembic.ini  deploy_backend.sh  deploy_frontend.sh  errors.txt  init_db.py  package.json  pyproject.toml  pytest.ini  replit.md  setup.sh  setup_https.sh  vue.config.js
.firebase/: hosting.ZGlzdA.cache
.tgportal_sessions/: user_session.session  user_session.session-journal
attached_assets/: Pasted--Unhandled-exception-during-request-GET-https-http-localhost-8000-api-telegram-groups-Except-1758441853275_1758441853275.txt  Pasted-0-messenger-ai-server-app-services-messenger-ai-MessengerAI-object-at-0x118cc4640-pytest--1758484491702_1758484491705.txt  Pasted-INFO-172-31-112-98-0-GET-api-telegram-groups-HTTP-1-1-500-Internal-Server-Error-ERROR--1758470208396_1758470208397.txt
functions/: index.js  package.json
migrations/versions/: 1b46139cbac0_add_phone_code_hash_to_ai_accounts.py  289982e0ae58_update_active_sessions.py  3a58f9d2a4e1_add_ai_accounts.py  5b19c2d3e4f2_add_groups_and_ai_assignments.py  b09dc8d3f7e2_fix_phone_number_to_string.py  e5a2710af7e1_initial_migration.py  fe42f8daa968_add_keywords.py
public/: index.html
scripts/: cleanup.sh
server/: IMPLEMENTATION_GUIDE.md  README.md  TROUBLESHOOTING_AI_MESSENGER.md
server/app/: main.py  temp_ensure_messenger_ai_initialized.py
server/messages/: messages.txt  messages_1.txt  messages_2.txt  telegram_messages.txt
src/: App.vue  main.js
tests/: conftest.py
(+117 files in other folders)
